feat: finaliza migração para Firebase e integra funcionalidades